--- a/index.html
+++ b/index.html
@@ -29,13 +29,22 @@
 <body>
     
     <div>
-        vinicius@gonssalves<span style="color: white;">:</span><span style="color: blue;">~</span><span style="color: white;">$</span> <span style="color: white;">./portifolio</span>
+        gonssalves@vinicius<span style="color: white;">:</span><span style="color: blue;">~</span><span style="color: white;">$</span> <span style="color: white;">./portifolio</span>
     </div>
 
     <blockquote>
         "He who conquers himself is the mightiest warrior."
         <cite>Confucius</cite>
     </blockquote>
+
+    <figure>
+        <blockquote>
+            "He who conquers himself is the mightiest warrior."
+        </blockquote>
+        <footer>
+            — <cite>Confucius</cite>
+        </footer>
+    </figure>
 
     <div class="v-container">
 
