--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         <p> Next, I'll dive deep into Excel, SQL and Python to do some side projects on my own. Due to my slower learning pace, I reckon it will require an extended period.</p>
 
         <p> No worries, life is a marathon :) </p>
+
+        <h3> Forget everything a said before, I fell in love with Java☕ </h3> 
         
         <h2>My educational background</h2>
             <ul>
